# easylic

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  LICENSE_STATE_MACHINE.md  README.md  client.py  deploy.sh  dev-setup.sh  docker-compose.yml  docker-entrypoint.sh  license.json  license_generator.py  pyproject.toml  readme_ru.md  security-scan.sh  server.py  server_private.key  server_public.key  setup.py
.github/workflows/: ci-cd.yml
easylic/: __init__.py  cli.py  server.py
easylic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
easylic/client/: __init__.py  client.py  session_handler.py
easylic/client/application/: runner.py  session_manager.py
easylic/client/domain/: entities.py
easylic/client/infrastructure/: config_loader.py  session_handler.py
easylic/common/: __init__.py  config.py  crypto.py  decorators.py  exceptions.py  interfaces.py  logging_config.py  logging_utils.py  mixins.py  models.py
easylic/docs/: decorators.md
easylic/examples/: complete_demo.py  decorator_usage.py
easylic/server/: __init__.py  admin.html  core.py  keygen.py  license_generator.py  license_validator.py  persistence.py  routes.py  server_private.key  server_public.key  services.py  session_manager.py  start_service.py
easylic/server/domain/: __init__.py  admin_handler.py  renew_handler.py  start_handler.py
easylic/tests/: test_decorators.py
examples/client/: README.md  basic_usage.py  status_check.py  threaded_usage.py
k8s/: deployment.yaml
nginx/: nginx.conf
systemd/: easylic.service
tests/: test_cli.py  test_client.py  test_config.py  test_integration.py  test_keygen.py  test_models.py  test_server.py
